--- a/P1/dasarWeb/test.html
+++ b/P1/dasarWeb/test.html
@@ -7,9 +7,11 @@
 </head>
 
 <body>
-  <table border=1 height=100 width=40 cellpadding=20>
+  <table border=1 height=100% width=40% cellpadding=20>
     <tr>
-      <td>ini baris pertama kolom pertama</td>
+      <td align=right valign=bottom>
+        <font face="courier" size="15" color="red">ini baris pertama kolom pertama</font>
+      </td>
       <td>ini baris pertama kolom kedua</td>
     </tr>
     <tr>
